--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,6 +128,13 @@ table {
   border-spacing: 0;
 }
 
+/*textarea {*/
+/*  margin: 0;*/
+/*  padding: 0;*/
+/*  border: none;*/
+/*  outline: none;*/
+/*}*/
+
 @layer base {
   :root {
     --background: 0 0% 100%;
